minor fixes / readability improvements / clean code

--- a/Styles/_content.scss
+++ b/Styles/_content.scss
@@ -12,12 +12,12 @@
 
 .tile {
     text-align: center;
-    width: 250px;
-    height: 250px;
+    width: 275px;
+    height: 275px;
     border-radius: 15px;
     background-color: var(--alabaster);
     color: var(--jet);
-    padding: 5px;
+    padding: 2px;
     margin: 5px;
     box-shadow: 0 0 1px 1px rgba(0,0,0,0.04), 
         0 0 2px 2px rgba(0,0,0,0.03), 
